# parlor

artifacts/: 09-tts-benchmark-and-streaming.md
src/: benchmark_tts.py  index.html  pyproject.toml  server.py
